--- a/Views/Shared/_GuestLayout.cshtml
+++ b/Views/Shared/_GuestLayout.cshtml
@@ -20,17 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.Action("Index", "Film")">Film Index</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="Create">Create Film</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.Action("Index", "Serie")">Serie Index</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Serie" asp-action="Create">Create Serie</a>
+                            <a class="nav-link" aria-current="page" href="@Url.Action("Index", "Film")">Admin</a>
                         </li>
 
                         @*aggiunta di componente per il login*@
