--- a/Views/Film/Create.cshtml
+++ b/Views/Film/Create.cshtml
@@ -1,14 +1,14 @@
-﻿using csharp_boolflix.Models
-@model ContentForm
+﻿@using csharp_boolflix.Models
+@model FormFilm
 
 <div class="container">
     <div class="row">
         <div class="col-12">
             <div class="d-flex align-items-center">
-                <h1 class="mt-3 mb-3">Nuova pizza</h1>
+                <h1 class="mt-3 mb-3">Nuovo film</h1>
             </div>
             <form asp-controller="Film" asp-action="Create" method="post">
-
+                @Html.AntiForgeryToken()
                 <div class="mb-3">
                     <strong>Nome:</strong>
                     <input asp-for="Film.Title" class="d-block w-100" />
@@ -21,13 +21,18 @@
                 </div>
                 <div class="mb-3">
                     <strong>Anno:</strong>
-                    <textarea asp-for="Film.Year" rows="10" class="d-block w-100"></textarea>
+                    <textarea asp-for="Film.Year" class="d-block w-100"></textarea>
                     <span asp-validation-for="Film.Year" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
                     <strong>Immagine:</strong>
                     <input asp-for="Film.Image" class="d-block w-100" />
                     <span asp-validation-for="Film.Image" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Durata:</strong>
+                    <textarea asp-for="Film.Duration" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Film.Duration" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
                     <strong>Regista:</strong>
