--- a/Views/Film/Index.cshtml
+++ b/Views/Film/Index.cshtml
@@ -1,4 +1,46 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+﻿@model List<Film>
+
+<h1>Lista film</h1>
+
+@if (Model.Count() == 0)
+{
+    <h3 class="text-center">Non sono presenti film nel database.</h3>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Titolo</th>
+                <th>Regista</th>
+                <th>Anno</th>
+                <th>Azioni</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (Film film in Model)
+            {
+                <tr>
+                    <td><a href="@Url.Action("Detail",new {id = film.Id})">@film.Id</a></td>
+                    <td class="title">
+                        @film.Title
+                    </td>
+                    <td class="director">
+                        @film.Director.Name
+                    </td>
+                    <td class="year">
+                        @film.Year
+                    </td>
+                    <td>
+                        <a class="m-2 btn btn-info" asp-area="" asp-controller="Film" asp-action="Details" asp-route-id="@film.Id">Dettagli Film</a>
+                        <form asp-controller="Film" asp-action="Delete" asp-route-id="@film.Id" method="post">
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="m-2  btn btn-danger"> Elimina Film </button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
