--- a/Views/Serie/Create.cshtml
+++ b/Views/Serie/Create.cshtml
@@ -1,5 +1,74 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using csharp_boolflix.Models.Form
+@model FormSerie
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex align-items-center">
+                <h1 class="mt-3 mb-3">Nuova Serie</h1>
+            </div>
+            <form asp-controller="Serie" asp-action="Create" method="post">
+                @Html.AntiForgeryToken()
+                <div class="mb-3">
+                    <strong>Nome:</strong>
+                    <input asp-for="Serie.Title" class="d-block w-100" />
+                    <span asp-validation-for="Serie.Title" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Descrizione:</strong>
+                    <textarea asp-for="Serie.Description" rows="10" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Serie.Description" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Anno:</strong>
+                    <textarea asp-for="Serie.Year" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Serie.Year" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Immagine:</strong>
+                    <input asp-for="Serie.Image" class="d-block w-100" />
+                    <span asp-validation-for="Serie.Image" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Regista:</strong>
+                    <select asp-for="Serie.DirectorId" rows="10" class="d-block w-100">
+                        @foreach (Director director in Model.Directors)
+                        {
+                            @if (Model.Serie.DirectorId == director.Id)
+                            {
+                                <option value="@director.Id" selected>@director.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@director.Id">@director.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <strong>Attori:</strong>
+                    <select asp-for="SelectedActors"
+                            asp-items="@Model.Actors"
+                            multiple="multiple"
+                            size="10"
+                            class="form-control mb-2 mr-sm-2 ml-sm-3 leftList">
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <strong>Categorie:</strong>
+                    <select asp-for="SelectedCategories"
+                            asp-items="@Model.Categories"
+                            multiple="multiple"
+                            size="10"
+                            class="form-control mb-2 mr-sm-2 ml-sm-3 leftList">
+                    </select>
+                </div>
+
+                <div class="text-end">
+                    <input type="submit" class="btn btn-small btn-success" value="Salva">
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
