--- a/Views/Serie/AddSeason.cshtml
+++ b/Views/Serie/AddSeason.cshtml
@@ -6,7 +6,7 @@
             <div class="d-flex align-items-center">
                 <h1 class="mt-3 mb-3">Nuova Stagione</h1>
             </div>
-            <form asp-controller="Season" asp-action="Create" method="post">
+            <form asp-controller="Serie" asp-action="AddSeason" asp-route-id="@Model.SerieId" method="post">
                 @Html.AntiForgeryToken()
                 <div class="mb-3">
                     <strong>Nome:</strong>
